# wechat-ocr

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
cpp/: .clang-format  CMakeLists.txt
src/wechat_ocr/: __init__.py
src/wechat_ocr/lib/: wcocr.pyi
src/wechat_ocr/linux/: __init__.py
src/wechat_ocr/windows/: __init__.py
src/wechat_ocr/windows/wx/Plugins/WeChatOcr/: file_component.xml  text_det_fp16_v2.xnet
tests/: test_ocr.py
