[project]
name = "wechat-ocr"
version = "0.1.0"
description = "微信OCR Python bindings"
readme = "README.md"
authors = [{ name = "sunfkny", email = "sunfkny@gmail.com" }]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
wechat-ocr = "wechat_ocr:main"

[build-system]
requires = ["scikit-build-core>=0.10", "cmake>=3.20"]
build-backend = "scikit_build_core.build"

[project.optional-dependencies]
dev = ["pytest"]

[tool.scikit-build]
minimum-version = "0.8"
cmake.build-type = "RelWithDebInfo"
cmake.source-dir = "cpp"

[tool.scikit-build.wheel]
packages = ["src/wechat_ocr"]

[dependency-groups]
dev = ["pytest>=8.3.5"]

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { dir = "src" }, { dir = "cpp" }]
